--- a/css/typography.css
+++ b/css/typography.css
@@ -27,6 +27,11 @@ body {
   font-weight: 700;
 }
 
+.date-text {
+  font-size: 18px;
+  font-weight: 700;
+}
+
 .body-text {
   font-size: 16px;
   font-weight: 500;
