--- a/css/typography.css
+++ b/css/typography.css
@@ -32,6 +32,11 @@ body {
   font-weight: 700;
 }
 
+.todo-text {
+  font-size: 16;
+  font-weight: 700;
+}
+
 .body-text {
   font-size: 16px;
   font-weight: 500;
